added UserController.CheckIfUsernameExists
